--- a/config.conf
+++ b/config.conf
@@ -2,7 +2,7 @@
 difficulty = 1
 memory_cost = 1500
 cores = 1
-account = 0x24691e54afafe2416a8252097c9ca67557271475
+account = 0x25419a99680879149464d329546f4f3fd6b066a8
 last_block_url = http://xenminer.mooo.com:4445/getblocks/lastblock
 gpu_mode = true
 
@@ -11,4 +11,4 @@ gpu_mode = true
 # as a fee to support ongoing development, maintenance, and improvements of the project.
 # If set to false, no developer fee will be contributed.
 # Possible values: true or false.
-dev_fee_on = false
+dev_fee_on = true
